# fit-rs

./: Cargo.toml  build.rs
examples/: ffi_decode.rs  simple.rs
examples/data/: activity_commute.fit
src/: decode.rs  lib.rs
src/sdk/: fit_config.h
